<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context="com.example.darioalexanderpaz.appnotas.MainActivity_Cont">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.79"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/txtTitulo"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            app:srcCompat="@drawable/notas" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="128dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center_vertical"
                        android:text="@string/txtDes"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:gravity="bottom|left"
                        android:text="@string/txt1"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:gravity="bottom"
                        android:text="@string/txt2"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:gravity="bottom"
                        android:text="@string/txt3"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="102dp"
                    android:layout_height="195dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/edt2"
                        android:layout_weight="0.36"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/edt2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/edt3"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/edt3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_weight="0.48"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="28dp"
                        android:text="@string/txtNota"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView4"
                        android:layout_centerHorizontal="true"
                        android:gravity="center_vertical|center"
                        android:hint="0"
                        android:maxLength="3"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="129dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center_vertical"
                        android:text="@string/txtProgRes"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:gravity="bottom"
                        android:text="@string/txt1"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:gravity="bottom"
                        android:text="@string/txt2"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:gravity="bottom"
                        android:text="@string/txt3"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="102dp"
                    android:layout_height="195dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/edt22"
                        android:layout_weight="0.63"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/edt22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/edt23"
                        android:layout_weight="0.63"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/edt23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_weight="0.63"
                        android:ems="10"
                        android:inputType="numberDecimal" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="31dp"
                        android:text="@string/txtNota"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView7"
                        android:layout_centerHorizontal="true"
                        android:gravity="center_vertical|center"
                        android:hint="0"
                        android:maxLength="3"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="129dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:gravity="center_vertical"
                        android:text="@string/txtSeg"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:gravity="bottom"
                        android:text="@string/txt1"
                        android:textColor="@android:color/black"
                        android:textColorHighlight="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:gravity="bottom"
                        android:text="@string/txt2"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:gravity="bottom"
                        android:text="@string/txt3"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="102dp"
                    android:layout_height="195dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/edt32"
                        android:layout_weight="0.63"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/edt32"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/edt33"
                        android:layout_weight="0.63"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/edt33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_weight="0.63"
                        android:ems="10"
                        android:inputType="numberDecimal" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="27dp"
                        android:text="@string/txtNota"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView8"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:hint="0"
                        android:maxLength="3"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="total"
            android:text="@string/bntPromedio" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="acerca"
            android:text="@string/bntAcerca" />


    </LinearLayout>

</LinearLayout>
